<resources>
    <string name="app_name">Golden Hour Ambulance</string>
    <string name="title_activity_signup">signup</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="welcome_onboard">WELCOME ONBOARD!</string>
    <string name="enter_your_full_name">Enter Your Full Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="find_help_in_no_time">Find help in no time</string>
    <string name="register">REGISTER</string>
    <string name="already_hav">Already have an account ? Sign In</string>
    <string name="welcome_back">WELCOME BACK</string>
    <string name="dont_hav">Don\'t have an account? Sign Up</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_map_api_key">AIzaSyBVe2QOe1QQe_Wz1rf7rGiZyXEkgQgjclY</string>
</resources>