<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_golden"
    tools:context=".sign_in">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="175dp"
        android:gravity="center"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textColor="#343a40"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="35dp"
            android:src="@drawable/logomain_removebg"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:hint="@string/enter_your_email"
            android:textSize="15sp"
            android:textColorHint="#777272"
            android:textColor="@color/registeration_details"
            android:layout_marginTop="46dp"
            android:paddingStart="25dp"
            android:background="@drawable/rounded_edittext"
            android:lineSpacingExtra="-2sp"
            android:gravity="center_vertical"
            tools:ignore="RtlSymmetry" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:hint="@string/enter_your_password"
            android:textSize="15sp"
            android:textColorHint="#777272"
            android:textColor="@color/registeration_details"
            android:layout_marginTop="21dp"
            android:paddingStart="25dp"
            android:background="@drawable/rounded_edittext"
            android:lineSpacingExtra="-2sp"
            android:gravity="center_vertical"
            tools:ignore="RtlSymmetry" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="25dp"
            android:text="Forgot Password"
            android:textColor="@color/green_string"
            android:textStyle="bold"
            android:gravity="center"
            />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginTop="35dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/bg_login_btn"
            app:backgroundTint="@null"
            android:elevation="2dp"
            android:translationZ="4dp"
            android:translationX="4dp"
            android:translationY="4dp"
            android:stateListAnimator="@null"
            />
        <TextView
            android:id="@+id/already_hav"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/already_hav"
            android:textAppearance="@style/dont_hav"
            android:lineSpacingExtra="-5sp"
            android:gravity="center_horizontal|top"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>